Turns out we do need yaml

--- a/tools/please_pex/zip/BUILD
+++ b/tools/please_pex/zip/BUILD
@@ -23,5 +23,6 @@ go_test(
     deps = [
         ":zip",
         "///third_party/go/github.com_stretchr_testify//assert",
+        "///third_party/go/github.com_stretchr_testify//require",
     ],
 )
