--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -10,6 +10,7 @@ jobs:
           - python-version: '3.9'
           - python-version: '3.10'
           - python-version: '3.11'
+          - python-version: '3.12'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
