Add pex meta path finder tests
These check that the pex meta path finder in the `ModuleDirImport`
class can correctly extract distribution metadata from a .dist-info
directory inside a pex file via the `importlib.metadata` API.

--- a/test/BUILD
+++ b/test/BUILD
@@ -196,3 +196,11 @@ python_test(
         "//third_party/python:click-log",
     ],
 )
+
+python_test(
+    name = "distribution_metadata_test",
+    srcs = ["distribution_metadata_test.py"],
+    deps = [
+        "//third_party/python:pygments",
+    ],
+)
