CI: use interpreter provided by `actions/setup-python`
`actions/setup-python` "installs" a non-standard Python interpreter in
the CI environment by adding a directory containing it to `PATH`, but
the updated `PATH` isn't inherited by the Please build sandbox, so the
system-wide Python interpreter is always used. Pass through the value of
`PATH` to the sandbox so that the correct `actions/setup-python`
interpreter is used.

Fixes #127.

--- a/test/BUILD
+++ b/test/BUILD
@@ -204,3 +204,9 @@ python_test(
         "//third_party/python:pygments",
     ],
 )
+
+# This test need only run in the GitHub Actions workflow - it is skipped outside this environment.
+python_test(
+    name = "ci_test",
+    srcs = ["ci_test.py"],
+)
