--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -18,22 +18,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set profile
-        run: export PLZ_CONFIG_PROFILE=ci && echo $PATH
+      - name: Use this Python in Please build environments
+        run: |
+          echo "$PATH"
+          echo "CI_PYTHON_VERSION=${{ matrix.python-version }}" >> $GITHUB_ENV
+          echo "PLZ_ARGS=-o build.passenv:PATH -o build.passenv:CI_PYTHON_VERSION" >> $GITHUB_ENV
       - name: Build and use in-repo pex tool
         if: matrix.pex-tool == 'in-repo'
         run: |
           ./pleasew build //tools/please_pex
           cp $(./pleasew query outputs //tools/please_pex) $HOME/please_pex
-          echo "PLZ_ARGS=-o plugin.python.pextool:$HOME/please_pex" >> $GITHUB_ENV
+          echo "PLZ_ARGS="$(grep ^PLZ_ARGS= $GITHUB_ENV | cut -d= -f2-)" -o plugin.python.pextool:$HOME/please_pex" >> $GITHUB_ENV
       - name: Run tests
         run: ./pleasew test --log_file plz-out/log/test.log -e e2e
       - name: Run e2e test
-        run: ./pleasew test --profile ci --log_file plz-out/log/e2e.log -i e2e
+        run: ./pleasew test --log_file plz-out/log/e2e.log -i e2e
       - name: Archive logs
         if: always()
         uses: actions/upload-artifact@v4
