Fix exploding zip-unsafe pexes

--- a/test/BUILD
+++ b/test/BUILD
@@ -194,3 +194,11 @@ python_test(
         "//third_party/python:six",
     ],
 )
+
+python_test(
+    name = "zip_unsafe_test",
+    srcs = ["zip_unsafe_test.py"],
+    deps = [
+        "//third_party/python:confluent-kafka",
+    ],
+)
