CI: temporarily remove in-repo Python tests
These tests don't really behave as expected: the code is built using the
in-repo python-build-standalone 3.12 interpreter (set by
`python.defaultinterpreter`) but is executed under the Python
interpreter provided by the runner (set by `python.defaultshebang`; also
3.12 on `ubuntu-latest`).

We'll shortly begin work on a .pex preamble format that will allow the
use of the python-build-standalone interpreter at both build and run
time, at which point this test can be readded.

--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -43,22 +43,8 @@ jobs:
         with:
           name: logs-${{ matrix.python-version }}-please_pex-${{ matrix.pex-tool }}
           path: plz-out/log
-  test_in_repo_python:
-    name: Test (Python 3.12 in repo)
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-      - name: Run tests
-        run: ./pleasew test --profile in_repo_python
-      - name: Archive logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: logs-in-repo-python
-          path: plz-out/log
   release:
-    needs: [test, test_in_repo_python]
+    needs: [test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/v1'
     steps:
