Run e2e tests using plugin-integration-testing plugin
`test/build_defs/test.build_defs` contains a vendorised, outdated
version of the `plz_e2e_test` build definition that has since been
migrated to its own plugin, please-build/plugin-integration-testing. Use
the build definition provided by the latest version of that plugin
rather than the vendorised copy.

--- a/.plzconfig
+++ b/.plzconfig
@@ -4,9 +4,6 @@ Version = >=17.12.2
 [Build]
 hashcheckers = sha256
 
-[Parse]
-PreloadBuildDefs = test/build_defs/test.build_defs
-
 [Plugin "go"]
 Target = //plugins:go
 ImportPath = github.com/please-build/python-rules
@@ -18,6 +15,9 @@ DisableVendorFlags = true
 
 [Plugin "shell"]
 Target = //plugins:shell
+
+[Plugin "e2e"]
+Target = //plugins:e2e
 
 [PluginDefinition]
 name = python
