--- a/plugins/BUILD
+++ b/plugins/BUILD
@@ -7,3 +7,9 @@ plugin_repo(
     name = "shell",
     revision = "v0.1.2",
 )
+
+plugin_repo(
+    name = "e2e",
+    plugin = "plugin-integration-testing",
+    revision = "v1.0.3",
+)
