--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,5 @@
 [Please]
-Version = >=17.12.2
+Version = >=17.19.1
 
 [Build]
 hashcheckers = sha256
@@ -18,6 +18,7 @@ Target = //plugins:shell
 
 [Plugin "e2e"]
 Target = //plugins:e2e
+DefaultPlugin = //test:python-rules
 
 [PluginDefinition]
 name = python
