--- a/.github/workflows/plugin_test.yaml
+++ b/.github/workflows/plugin_test.yaml
@@ -1,6 +1,10 @@
 on:
   workflow_call:
     inputs:
+      id:
+        description: "A identifier for this test run. Will be included in the Please log archive file name."
+        type: string
+        default: test
       runner:
         description: "The GitHub runner type on which this workflow should run."
         required: true
@@ -14,6 +18,10 @@ on:
         required: false
         type: boolean
         default: false
+      test_targets:
+        description: "A space-delimited list of targets to pass to `plz test`."
+        type: string
+        default: //...
 jobs:
   test:
     name: Run tests
@@ -38,9 +46,9 @@ jobs:
           cp $(./pleasew query outputs //tools/please_pex) $HOME/please_pex
           echo "PLZ_ARGS="$(grep ^PLZ_ARGS= $GITHUB_ENV | cut -d= -f2-)" -o plugin.python.pextool:$HOME/please_pex" >> $GITHUB_ENV
       - name: Run tests
-        run: ./pleasew test --keep_going --log_file plz-out/log/test.log
+        run: ./pleasew test --keep_going --log_file plz-out/log/test.log ${{ inputs.test_targets }}
       - name: Archive logs
         uses: actions/upload-artifact@v4
         with:
-          name: logs-python_${{ inputs.python }}-please_pex_${{ inputs.please_pex_from_repo && 'repo' || 'stable' }}
+          name: logs-${{ inputs.id }}-python_${{ inputs.python }}-please_pex_${{ inputs.please_pex_from_repo && 'repo' || 'stable' }}
           path: plz-out/log
