Add `InterpreterOptions` e2e test
This new test ensures that the `InterpreterOptions` plugin config option
is being honoured by `python_binary` by changing the `__main__` module
that the Python interpreter is supposed to execute and checking that the
correct one is in fact executed.

--- a/test/BUILD
+++ b/test/BUILD
@@ -202,3 +202,14 @@ python_test(
     ],
     labels = ["manual"],
 )
+
+plugin_e2e_test(
+    name = "interpreter_options_test",
+    repo = "interpreter_options_repo",
+    test_cmd = [
+        "plz run //:binary > binary",
+    ],
+    expected_output = {
+        "binary": "Executed plzmodule.py",
+    },
+)
